# schemadoc

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
crates/schemadoc-diff/: .gitignore  Cargo.toml  README.md
crates/schemadoc-diff/crates/schemadoc-diff-derive/: Cargo.toml
crates/schemadoc-diff/crates/schemadoc-diff-derive/src/: lib.rs
crates/schemadoc-diff/data/: visitor-pointer-test.json
crates/schemadoc-diff/data/checks/added-required-parameter/: schema-with-parameters.json  schema-with-update-parameters.json
crates/schemadoc-diff/data/checks/added-required-property/: schema-with-required-body-altered.json  schema-with-required-body.json
crates/schemadoc-diff/data/checks/added-required-request-body/: schema-with-required-body-altered.json  schema-with-required-body.json
crates/schemadoc-diff/data/checks/removed-media-type/: schema-with-media-types-altered.json  schema-with-media-types.json
crates/schemadoc-diff/data/checks/removed-operation/: schema-with-operations-altered.json  schema-with-operations.json
crates/schemadoc-diff/data/checks/removed-response-property/: schema-with-responses-altered.json  schema-with-responses.json
crates/schemadoc-diff/data/checks/removed-schema-enum-value/: schema-with-enums-altered.json  schema-with-enums.json
crates/schemadoc-diff/data/checks/updated-schema-type/: schema-altered.json  schema.json
crates/schemadoc-diff/src/: context.rs  core.rs  diff_own_changes.rs  diff_result_type.rs  error.rs  lib.rs  path_pointer.rs  schema.rs  schema_diff.rs  schema_diff_utils.rs  visitor.rs
crates/schemadoc-diff/src/checker/: added_required_body_property_check.rs  added_required_parameter_check.rs  added_required_request_body_check.rs  mod.rs  removed_media_type_check.rs  removed_operation_check.rs  removed_response_property_check.rs  removed_schema_enum_value_check.rs  updated_schema_type_check.rs
crates/schemadoc-diff/src/exporters/: markdown.rs  mod.rs
crates/schemadoc-diff/src/schemas/: mod.rs
crates/schemadoc-diff/src/visitors/: affected_operations_visitor.rs  mod.rs
(+106 files in other folders)
