[package]
name = "schemadoc"
version = "0.3.2"
edition = "2021"
authors = ["Dzmitry Bukhta <bukhta.d@gmail.com>"]
readme = "README.md"
keywords = ["openapi", "diff", "breaking", "changes"]
license = "Apache-2.0"
autotests = false

[workspace]
members = [
    "crates/schemadoc-diff"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10"
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
indexmap = "1"
serde = "1.0"
serde_json = "1"
serde_yaml = "0.9"
actix-web = "4"
actix-files = "0.6"
async-trait = "0.1"
actix-cors = "0.6.4"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.11.18", features = ["json"] }
schemadoc-diff = { path = "crates/schemadoc-diff", version = "0.1.20" }


